@@ -1,6 +1,7 @@
 46
 ================
 
+09/03/22 Correct table/column schema for new CodeMirror
 09/03/22 Fix RTL issues with SQL/HTML editor
 09/03/22 Update CodeMirror to latest stable release
 07/03/22 Validate that online form field names are unique #1111
